alreay with login, order and restaurant

--- a/WebManagerApp/lesson1/public/index.html
+++ b/WebManagerApp/lesson1/public/index.html
@@ -16,7 +16,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&family=Poppins:wght@600&family=Architects+Daughter&display=swap" rel="stylesheet">
-    <title>React App</title>
+    <title>Manager App</title>
   </head>
   <body style="background-color: #15161A">
     <noscript>You need to enable JavaScript to run this app.</noscript>
