--- a/WebApp/product-france-flan.html
+++ b/WebApp/product-france-flan.html
@@ -318,7 +318,7 @@
         </div>
     </footer>
     <!-- Footer Section End -->
-
+    <div id="snackbar">Add product to cart successfully!</div>
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
